<resources>
    <string name="app_name">Trep</string>

    <string name="bottom_nav_item_feed">피드</string>
    <string name="bottom_nav_item_schedule">일정관리</string>
    <string name="bottom_nav_item_recommend">코스추천</string>
    <string name="bottom_nav_item_setting">설정</string>

    <string name="sign_up">회원가입</string>
    <string name="email">이메일</string>
    <string name="email_auth">이메일 인증하기</string>
    <string name="email_hint">이메일을 입력해주세요.</string>
    <string name="password_hint">비밀번호를 입력해주세요.</string>
    <string name="password_check_hint">비밀번호를 한번 더 입력해주세요.</string>
    <string name="nickname_hint">닉네임은 최대 8까지 가능해요.</string>
    <string name="service">서비스 이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="essential">(필수)</string>
    <string name="optional">(선택)</string>
    <string name="event_marketing">이벤트/마케 수신동의 (선택)</string>
    <string name="input_email_code">이메일로 전송된 인증코드를 입력해주세요.</string>
    <string name="auth_code_hint">인증코드 6자리 입력</string>
    <string name="email_not_receive">이메일을 받지 못하셨나요?</string>
    <string name="email_resend">이메일 재전송하기</string>
    <string name="sign_up_most_success">회원가입이 거의 완료되었습니다.</string>
    <string name="sign_up_most_success_text">지금 뒤로 가면 입력한 정보가 모두 삭제됩니다.\n회원가입 완료하지 않고 나가시겠어요?</string>
    <string name="exit">나가기</string>
    <string name="email_format_error">이메일 형식이 아닙니다.</string>
    <string name="password_format_error">영문, 숫자, 특수문 조합의 8자이상 20자이내</string>
    <string name="password_check_format_error">비밀번호가 일치하지 않습니다.</string>
    <string name="nickname_format_error">해당 닉네임은 이미 사용중입니다.</string>
    <string name="auth_code_error">인증코드가 만료되었습니다.</string>
    <string name="auth_code_format_error">인증코드가 일치하지 않습니다.</string>
    <string name="forgot_password">비밀번호를 잊어버리셨나요?></string>
    <string name="sign_up_yet_text">아직 회원이 아니신가요?></string>
    <string name="tutorial">둘러보기</string>
    <string name="keep_going">계속하기</string>
    <string name="auth">인증</string>
</resources>