<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignUpActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:src="@drawable/left_arrow_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:textColor="@color/black"
        style="@style/Text.MediumText16sp"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">


                <EditText
                    android:id="@+id/emailEditTextView"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edit_bg_grey_radius_10dp"
                    android:hint="이메일"
                    android:paddingStart="15dp"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/emialValidationButton"
                    style="@style/Text.MediumText16sp"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/btn_bg_grey_radius_6dp"
                    android:gravity="center"
                    android:text="이메일 인증"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailEditTextView"></TextView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:visibility="gone"
                    android:id="@+id/authCodeConstraint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#FBFBFB"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emialValidationButton">

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/Text.MediumText15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/input_email_code"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edit_bg_grey_radius_10dp"
                        android:backgroundTint="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView4">

                        <EditText
                            android:id="@+id/codeEditTextView"
                            style="@style/Text.MediumText15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:layout_marginBottom="15dp"
                            android:background="@null"
                            android:hint="@string/auth_code_hint"
                            android:maxLength="6"
                            android:paddingLeft="16sp"
                            app:layout_constraintBottom_toTopOf="@+id/textView6"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"></EditText>

                        <TextView
                            android:id="@+id/textView9"
                            style="@style/Text.MediumTextNotPadding15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="14dp"
                            android:text="00"
                            android:textColor="#FF8585"
                            app:layout_constraintBottom_toBottomOf="@+id/codeValidationButton"
                            app:layout_constraintEnd_toStartOf="@+id/codeValidationButton"
                            app:layout_constraintTop_toTopOf="@+id/codeValidationButton"></TextView>

                        <TextView
                            android:id="@+id/textView8"
                            style="@style/Text.MediumTextNotPadding15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="00:"
                            android:textColor="#FF8585"
                            app:layout_constraintBottom_toBottomOf="@+id/codeValidationButton"
                            app:layout_constraintEnd_toStartOf="@+id/textView9"
                            app:layout_constraintTop_toTopOf="@+id/codeValidationButton"></TextView>

                        <TextView
                            android:id="@+id/textView6"
                            style="@style/Text.MediumErrorText12sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/auth_code_error"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/codeEditTextView"
                            app:layout_constraintTop_toBottomOf="@+id/codeEditTextView" />

                        <TextView
                            android:id="@+id/codeValidationButton"
                            style="@style/Text.MediumText15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/btn_bg_grey_radius_6dp"
                            android:gravity="center"
                            android:paddingStart="15dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="5dp"
                            android:text="@string/auth"
                            android:textColor="#B7BABD"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/oval_icon"
                        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"></ImageView>

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/Text.MediumErrorText12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:text="@string/email_not_receive"
                        android:textColor="#B7BABD"
                        app:layout_constraintBottom_toBottomOf="@+id/emailResendTextView"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/emailResendTextView"></TextView>

                    <TextView
                        android:id="@+id/emailResendTextView"
                        style="@style/Text.MediumErrorText12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/email_resend"
                        android:textColor="#B7BABD"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView10"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"></TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_bg_grey_radius_10dp"
                    android:hint="비밀번호 확인"
                    android:paddingStart="15dp"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/emialValidationButton"
                    app:layout_constraintStart_toStartOf="@+id/emialValidationButton"
                    app:layout_constraintTop_toBottomOf="@+id/passwordErrorTextView">
                </EditText>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/passwordCheckErrorTextView"
                    style="@style/Text.MediumErrorText12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/password_check_format_error"
                    app:layout_constraintStart_toStartOf="@+id/editText3"
                    app:layout_constraintTop_toBottomOf="@+id/editText3">
                </TextView>



                <EditText
                    style="@style/Text.MediumText15sp"
                    android:paddingStart="15dp"
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_bg_grey_radius_10dp"
                    android:hint="비밀번호"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/emialValidationButton"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/emialValidationButton"
                    app:layout_constraintTop_toBottomOf="@+id/authCodeConstraint">
                </EditText>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/passwordErrorTextView"
                    style="@style/Text.MediumErrorText12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/password_format_error"
                    app:layout_constraintStart_toStartOf="@+id/editText2"
                    app:layout_constraintTop_toBottomOf="@+id/editText2"></TextView>

                <EditText
                    android:id="@+id/editText4"
                    style="@style/Text.MediumText15sp"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/edit_bg_grey_radius_10dp"
                    android:hint="닉네임(최대 8자까지)"
                    android:paddingStart="15dp"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/emialValidationButton"
                    app:layout_constraintStart_toStartOf="@+id/emialValidationButton"
                    app:layout_constraintTop_toBottomOf="@+id/passwordCheckErrorTextView">
                </EditText>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/nicknameErrorTextView"
                    style="@style/Text.MediumErrorText12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/nickname_format_error"
                    app:layout_constraintStart_toStartOf="@+id/editText4"
                    app:layout_constraintTop_toBottomOf="@+id/editText4"></TextView>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="34dp"
                    android:text="서비스 이용 약관, 개인정보 처리방침(필수)"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nicknameErrorTextView"></TextView>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:text="이벤트/마케팅 수신동의 (선택)"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView"></TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_bg_grey_radius_6dp"
            android:gravity="center"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>